# EdgeDetectionViewer

./: LICENSE  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  edge_detection.cpp  gl_renderer.cpp  image_processor.h  jni_bridge.cpp
app/src/main/java/com/example/edgedetectionviewer/: CameraRenderer.java  EdgeDetectionJNI.java  GLTextureRenderer.java  MainActivity.java
webviewer/public/: style.css
webviewer/src/: fps_config.ts  image_display.ts  index.ts
